# granite-guardian-shield

./: .flake8  .gitignore  README.md  build.yaml  config.yaml  pyproject.toml  run.yaml  secrets.env.example
.github/workflows/: test.yml
example/: client.py
granite_guardian_shield/: __init__.py  config.py  constants.py  helpers.py  inference.py  models.py  risk_assessor.py  shield.py
providers.d/remote/safety/: granite_guardian_shield.yaml
src/granite_guardian_shield/: __init__.py  config.py  helpers.py  shield.py
tests/integration/: test_shield_integration.py
tests/unit/: test_helpers.py  test_shield.py
